Bug 475668 - XDG portal file picker "Show Preview Pane" option is greyed out during file saving in Firefox and Chromium/Chrome
Summary: XDG portal file picker "Show Preview Pane" option is greyed out during file s...
Status: RESOLVED FIXED
Alias: None
Product: xdg-desktop-portal-kde
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 5.27.8
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
: 504127 (view as bug list)
Depends on:
Blocks:
 
Reported: 2023-10-15 20:09 UTC by Richard Steven Hack
Modified: 2025-06-13 03:46 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.4.0
Sentry Crash Report:


Attachments
Picture of greyed out Show Preview Pane option in KDE File Picker (2.24 MB, image/jpeg)
2023-10-15 20:16 UTC, Richard Steven Hack
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Richard Steven Hack 2023-10-15 20:09:38 UTC
SUMMARY
***
When trying to save a file using the KDE file picker on Firefox, the Show Preview Pane option is greyed out. It cannot be clicked on to activate it and F11 does not work. This only occurs on Firefox - other KDE file dialogs are unaffected.
***


STEPS TO REPRODUCE
1.  Do a clean install of Firefox - do nothing to modify Firefox except use about:config to set the XDG settings to 1 to enable the KDE file picker instead of the GTK file picker.
2.  Run Firefox, browse to an image file on the Internet.
3.  Do a Save Page As which opens the KDE File Picker.

OBSERVED RESULT
The Show Preview Pane option is greyed out and neither a click nor F11 can activate it.

EXPECTED RESULT
The Show Preview Pane should be available for activation by a mouse click or F11.

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: openSUSE Tumbleweed Snapshot 20231012
(available in About System)
KDE Plasma Version: 5.27.8
KDE Frameworks Version: 5.110.0
Qt Version: 5.15.11

ADDITIONAL INFORMATION
Kernel Version: 6.5.6-1-default (64-bit)
Graphics Platform; X11
Processor: Ryzen 5 2600X
Ram: 64GB
Graphics Processor: AMD Radeon RX 550 Series

Note that the Show Preview Pane option functions normally in all file save and open operations in other KDE applications.
See attached photo of the bug.
Comment 1 Richard Steven Hack 2023-10-15 20:16:48 UTC
Created attachment 162328 [details]
Picture of greyed out Show Preview Pane option in KDE File Picker
Comment 2 Nate Graham 2023-10-16 18:10:00 UTC
Can reproduce. However it doesn't happen in our reference portal test implementation, which means it's being disabled in Firefox's code somehow. I'd recommend that you submit a bug report to them. Thanks!
Comment 3 Nate Graham 2025-05-14 17:52:23 UTC
*** Bug 504127 has been marked as a duplicate of this bug. ***
Comment 4 Roke Julian Lockhart Beedell 2025-05-14 18:07:53 UTC Comment hidden (spam)
Comment 5 Roke Julian Lockhart Beedell 2025-05-14 18:09:03 UTC Comment hidden (spam)
Comment 6 Richard Steven Hack 2025-05-15 16:49:21 UTC
There is an issue with browsers on the openSUSE Tumbleweed system not using the KDE XDG portal and defaulting to the GTK portal. This issue occurred on my machine and the Beelink mini PC next to it (also running openSUSE Tumbleweed.)

Working with Google Gemini 2.5 Pro Preview yesterday (which has an awesome amount of KDE knowledge in its training data), I came up with a (possibly temporary) fix for that, by creating and editing a portals.conf in /etc/xdg-desktop-portal as shown below:

cd /etc/xdg-desktop-portal
-rw-r--r-- 1 root root 24 May 14 15:10 portals.conf

/etc/xdg-desktop-portal> cat portals.conf
[preferred]
default=kde

Today, the issue of the lack of a preview panel is resolved on both my machines.  I can only assume the two problems are related. It's possible something else changed, of course, so I'm just mentioning this in passing.
Comment 7 Nate Graham 2025-05-15 19:31:53 UTC
I don't think this is distro-specific; I can reproduce it myself on Fedora 42 KDE with KDE software built from source code.

If that fixes the issue for you, perhaps the problem is in these browsers for trying to force the use of the GNOME portal or something?
Comment 8 David Redondo 2025-06-04 09:24:21 UTC
KDirOperator conditionally enables preview support depending on the types of files being shown. 
For that it checks the current filters and if those mime types have preview support.
However it fails to resolve  name filters like "*.[pP][nN][gG]". But it can resolve "*.png" and "*.PNG"
Comment 9 Bug Janitor Service 2025-06-04 14:01:51 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/xdg-desktop-portal-kde/-/merge_requests/399
Comment 10 David Redondo 2025-06-11 13:04:53 UTC
Git commit 96339a76adea65071233f0cb85d05b43f2f8e548 by David Redondo.
Committed on 11/06/2025 at 13:01.
Pushed by davidre into branch 'master'.

filechooser: Normalize name filters to something more common

The upstream spec recommends to set filters in a form like
*.[pP][nN][gG] to match upper and lower case extensions.
This confuses our stack which expects filters to not include
groups and matches case insensitively anyway.
This patch converts name filters that are in the mentioned form
to the more "normal" one.
FIXED-IN:6.4

M  +22   -0    src/filechooser.cpp

https://invent.kde.org/plasma/xdg-desktop-portal-kde/-/commit/96339a76adea65071233f0cb85d05b43f2f8e548
Comment 11 David Redondo 2025-06-11 13:21:14 UTC
Git commit 0b87b05a787cb5e7beb41dde569e47e81a56690c by David Redondo.
Committed on 11/06/2025 at 13:11.
Pushed by davidre into branch 'Plasma/6.4'.

filechooser: Normalize name filters to something more common

The upstream spec recommends to set filters in a form like
*.[pP][nN][gG] to match upper and lower case extensions.
This confuses our stack which expects filters to not include
groups and matches case insensitively anyway.
This patch converts name filters that are in the mentioned form
to the more "normal" one.
FIXED-IN:6.4


(cherry picked from commit 96339a76adea65071233f0cb85d05b43f2f8e548)

Co-authored-by: David Redondo <kde@david-redondo.de>

M  +22   -0    src/filechooser.cpp

https://invent.kde.org/plasma/xdg-desktop-portal-kde/-/commit/0b87b05a787cb5e7beb41dde569e47e81a56690c