filechooser: Normalize name filters to something more common

The upstream spec recommends to set filters in a form like
*.[pP][nN][gG] to match upper and lower case extensions.
This confuses our stack which expects filters to not include
groups and matches case insensitively anyway.
This patch converts name filters that are in the mentioned form
to the more "normal" one.
BUG:475668
FIXED-IN:6.4


(cherry picked from commit 96339a76adea65071233f0cb85d05b43f2f8e548)

Co-authored-by: David Redondo <kde@david-redondo.de>